--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "Домашнее задание модуля Webpack",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .ts",
+    "tsc":"tsc --noEmit",
     "start": "npx webpack serve --config webpack.config.dev.js",
     "build": "npx webpack --config webpack.config.prod.js",
-    "build:dev": "npx webpack --config webpack.config.dev.js"
+    "build:dev": "npx webpack --config webpack.config.dev.js",
+    "check": "npm run lint && npm run tsc"
   },
   "author": "Sergey Bernyakovich",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
